# bbo-bench

./: LICENSE  README.md  pyproject.toml  requirements.in
config/hydra/: benchmark_optimizer.yaml  benchmark_shapley.yaml
config/hydra/optimizer/: lambo2.yaml
config/hydra/optimizer/branches/: protein_constraint.yaml  protein_generation.yaml  protein_property.yaml
config/hydra/optimizer/guidance_objective/: generic_task.yaml
config/hydra/optimizer/optim/: lambo.yaml
config/hydra/optimizer/roots/: protein_seq.yaml
config/hydra/optimizer/tasks/: generic_constraint.yaml  generic_task.yaml  protein_seq.yaml
config/hydra/optimizer/tree/: sequence_model_conservative.yaml
config/hydra/presolved_data_package/: ehr_v-08_l-128_m-8_c-8_q-8.yaml  ehr_v-32_l-032_m-4_c-4_q-2.yaml  ehr_v-32_l-032_m-4_c-4_q-4.yaml  ehr_v-32_l-128_m-4_c-4_q-2.yaml  ehr_v-32_l-128_m-4_c-4_q-4.yaml  ehr_v-32_l-128_m-8_c-8_q-8.yaml
config/hydra/test_function/: ehr_v-08_l-128_m-8_c-8_q-8.yaml  ehr_v-32_l-032_m-4_c-4_q-2.yaml  ehr_v-32_l-032_m-4_c-4_q-4.yaml  ehr_v-32_l-128_m-4_c-4_q-2.yaml  ehr_v-32_l-128_m-4_c-4_q-4.yaml  ehr_v-32_l-128_m-8_c-8_q-8.yaml
config/wandb/: example_sweep.yaml  reproduce_llome_lambo_results.yaml  sweep_shapley.yaml
scripts/: benchmark_optimizer.py  benchmark_shapley.py  benchmark_solver.py
src/bbo-bench/observers/: _simple_observer.py
src/bbo_bench/attributions/: __init__.py  _shapley.py
src/bbo_bench/observers/: __init__.py  _simple_observer.py
src/bbo_bench/utils/: __init__.py  _load_presolved_data.py  _vocab.py
tests/: test_load_presolved_data.py  test_shapley.py  test_simple_observer.py
