[project]
authors = [{name = "Frances Ding", email = "ding.frances.fd1@gene.com"}]
dynamic = ["version"]
name = "bbo-bench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "hydra-core",
    "wandb",
    "pytorch-holo @ git+https://github.com/prescient-design/holo-bench.git",
    "poli-core @ git+https://github.com/MachineLearningLifeScience/poli.git",
    "poli-baselines[lambo2] @ git+https://github.com/MachineLearningLifeScience/poli-baselines.git@main",
    "levenshtein",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pip-tools",
    "pytest-cov",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore-init-module-imports = true
line-length = 79
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # requires python >= 3.10
    "B007",  # unused-loop-control-variable
    "E741",  # ambiguous-variable-name
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # MODULE IMPORTED BUT UNUSED
]

[tool.setuptools_scm]
search_parent_directories = true
local_scheme = "node-and-date"
version_scheme = "no-guess-dev"
fallback_version = "0.0.0"
